# tg_chatgpt

./: .env.template  README.md  pyproject.toml
src/: bot.py
